# CS495-Curious-Monkey

./: .env.example  .gitignore  AUTHORS.md  CITATION.cff  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  demo.py  make_presentation.py  paper_sections_updated.tex  poster_v1.md  presentation.pptx  pyproject.toml  requirements-finetune.txt  requirements.txt  streamlit_app.py  ui_reference.py
data/: phase4_test.jsonl  phase4_training.jsonl
figures/: results_section_draft.txt  table1_model_summary.csv  table2_attack_summary.csv  table3_language_summary.csv  table4_p2c_summary.csv  table_p3_model_info.csv  table_p4_before_after.csv
notebooks/: analysis.ipynb  formal_research_tests.ipynb  generate_themed_figures.py  results_presentation.ipynb  results_presentation_executed.ipynb  scratch_demo.ipynb
results/: 20260430T013807Z.json  20260430T022853Z.json  20260430T023039Z.json  20260503T222547Z.json  20260503T222654Z.json  20260503T224623Z.json  20260503T224848Z.json  20260504T033357Z.json  20260504T034830Z.json  20260504T035223Z.json  20260504T041645Z.json  baseline_table.csv
results/archive/: qwen3.5-9b_p1_20260514T042214Z.json  qwen3.5-9b_p2b_20260517T231836Z.json  qwen3.6-27b-mtp_p1_20260526T054657Z.json  qwen3.6-27b-mtp_p2b_20260526T070206Z.json
results/formal/: 20260507T035542Z.json  20260507T042940Z.json  20260513T001029Z.json
results/formal_p2a/: 20260518T020002Z.json  20260518T021639Z.json
results/formal_p2b/: 20260517T235552Z.json  20260518T012551Z.json  20260518T020002Z.json  (+3 more)
src/: main.py
tests/: test_attacks.py  test_scoring.py  test_session.py
(+102 files in other folders)
